# YKS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: cardimage.py  cards.py  chart.py  chs.py  config.py  db.py  ja.py  jihuanshe.py  main.py  models.py  notifier.py  pikaqian.py  pokemon_names.py  pricing.py  psa.py  repository.py  settings_store.py  tcgdex.py  updater.py
app/data/: chs_cards.json  ja_cards.json  pokemon_names.json
app/static/: styles.css
app/templates/: base.html  dashboard.html  detail.html  settings.html  update.html
docker/: yks-entrypoint.sh
scripts/: build_chs_cards.py  build_ja_cards.py  build_pokemon_names.py  smoke-docker.ps1
tests/: test_alerts.py  test_auth.py  test_cardimage.py  test_cards.py  test_chart.py  test_chs.py  test_dashboard.py  test_db.py  test_ja.py  test_notifier.py  test_pikaqian.py  test_pokemon_names.py  test_pricing.py  test_psa.py  test_repository.py  test_settings_store.py  test_tcgdex.py  test_updater.py
