[project]
name = "pokemon-card-price-watch"
version = "0.1.0"
description = "Personal Pokemon card price subscription dashboard"
requires-python = ">=3.12"
dependencies = [
  "apscheduler==3.10.4",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "jinja2==3.1.5",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
